MED-55 Change docker-compose setting to run selenium in docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     image: postgres:9.6
   redis:
     image: redis:4.0.10
+  selenium:
+    image: selenium/standalone-chrome-debug:3.7.1
+    ports:
+      - 4444:4444   # Selenium
+      - 5900:5900   # VNC server
   web:
     restart: always
     environment:
@@ -22,6 +27,9 @@ services:
     depends_on:
       - postgres
       - redis
+      - selenium
+    links:
+      - selenium
   documentation:
     restart: always
     build: ./
