--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ django-storages==1.6.6
 boto3==1.7.63
 
 # Websocket
-channels_redis
+channels_redis==2.2.1
 channels==2.1.2
 selenium==3.13.0
+websocket-client==0.49.0
