--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,6 @@ channels_redis==2.2.1
 channels==2.1.2
 selenium==3.13.0
 websocket-client==0.49.0
+
+# Track changes/history to model changes
+django-simple-history==2.3.0
