--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==2.0.7
 django-configurations==2.0
 gunicorn==19.8.1
 newrelic==3.4.0.95
+django-cors-headers==2.4.0
 
 # For the persistence stores
 psycopg2-binary==2.7.5
@@ -42,6 +43,3 @@ channels_redis==2.2.1
 channels==2.1.2
 selenium==3.13.0
 websocket-client==0.49.0
-
-# Track changes/history to model changes
-django-simple-history==2.3.0
