--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,14 @@ channels_redis==2.2.1
 channels==2.1.2
 selenium==3.13.0
 websocket-client==0.49.0
+
+# Deeplearning
+konlpy==0.4.4
+numpy==1.15.0
+scipy==1.1.0
+scikit-learn==0.19.2
+matplotlib==2.2.3
+JPype1==0.6.3
+pandas==0.23.4
+msgpack==0.5.6
+jupyter==1.0.0
