--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,9 @@ services:
       - selenium
     links:
       - selenium
+    # Uncomment to debug and exec 'docker attach web'
+    #stdin_open: true
+    #tty: true
   documentation:
     container_name: documentation
     restart: always
