--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     command: >
       bash -c "python wait_for_postgres.py &&
                ./manage.py migrate &&
+               ./manage.py initadmin &&
                ./manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./:/code
