--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,12 +38,12 @@ services:
     # Uncomment to debug and exec 'docker attach web'
     #stdin_open: true
     #tty: true
-  documentation:
-    container_name: documentation
-    restart: always
-    build: ./
-    command: "mkdocs serve"
-    volumes:
-      - ./:/code
-    ports:
-      - "8001:8001"
+  #documentation:
+    #container_name: documentation
+    #restart: always
+    #build: ./
+    #command: "mkdocs serve"
+    #volumes:
+      #- ./:/code
+    #ports:
+      #- "8001:8001"
