--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,7 @@ django_unique_upload==0.2.1
 
 # Rest apis
 djangorestframework==3.8.2
-Markdown==2.6.11
-django-filter==2.0.0 
+Markdown==2.6.11 django-filter==2.0.0 
 # Developer Tools
 ipdb==0.11
 ipython==6.4.0
@@ -37,13 +36,5 @@ pytest-asyncio==0.9.0
 django-storages==1.6.6
 boto3==1.7.63
 
-<<<<<<< HEAD
 # django tagging
 django-taggit
-=======
-# Websocket
-channels_redis==2.2.1
-channels==2.1.2
-selenium==3.13.0
-websocket-client==0.49.0
->>>>>>> 1acd7cd94e99cc7aab830ebe4246a6e8469401db
