--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ django_unique_upload==0.2.1
 
 # Rest apis
 djangorestframework==3.8.2
-Markdown==2.6.11 django-filter==2.0.0 
+Markdown==2.6.11 
+django-filter==2.0.0 
+
 # Developer Tools
 ipdb==0.11
 ipython==6.4.0
